fix(tooltip): positioning fix for tooltip
Fixes an issue where the tooltip message would be cut off/overlapped when the tooltip was out of
bounds

--- a/just-not-sorry.css
+++ b/just-not-sorry.css
@@ -3,5 +3,6 @@
 }
 
 .jns-tooltip {
-  width: 200px;
+  width: 175px;
+  margin-bottom: 30px;
 }
